--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve",
-    "build": "NODE_ENV='production' && webpack"
+    "build": "SET NODE_ENV='production' && webpack"
   },
   "babel": {
     "presets": [
